--- a/styles.css
+++ b/styles.css
@@ -3,20 +3,20 @@ p {
     font-size:medium;
     margin: 20px;
 }
-span.larger {
-    font-size:x-large;
-    font-weight:bolder;
-}
-p.different_paragraphs {
+p[different_paragraphs] {
     text-decoration: underline;
     color: green;
-    background-color: gray;
+    background-color: gray
 }
-#unique_paragraph {
+p[unique_paragraph] {
     color: red;
     padding: 5mm;
     border: solid black;
 }
-#yellow {
-    color: yellow;
+span[larger] {
+    font-size:x-large;
+    font-weight:bolder;
+}
+span[yellow] {
+    color: yellow
 }
